# OpenSTL

./: CMakeLists.txt  CNTRIBUTING.md  LICENSE  README.md
include/OpenSTL/: algorithm.h  array.h  memory.h  type_traits.h  utility.h  vector.h
include/OpenSTL/internal/: iterator.h  reverse_iterator.h
test/: CMakeLists.txt  algorithm_test.cpp  array_test.cpp  memory_test.cpp  vector_test.cpp
